# HIAST_RAG

./: .gitignore  README.md  app.py  build_vector_db.py  data_distinct.txt  embedder.py  main.py  requirements.txt
Backend_AI/: .gitignore  README.md  app.py  build_vector_db.py  chatbox_generator.py  main.py  pyproject.toml  requirements.txt  run_analytics.py  scrapedData.json  scraped_data2.json  scraped_homepage.json
Backend_AI/src/: embedder.py  models.py  models_configuration.py  rag_abstractions.py  rag_chain.py  token_manager.py  url_scraper.py
Backend_AI/test/: README.md  __init__.py  build_db_from_json.py  results.json  run_tests.py  squad_2000_samples.json  test_ai_system.py  test_dataset_loader.py  test_rag_strategies.py
Backend_Web/: README.md
Backend_Web/Application/: Application.csproj  DependencyInjection.cs
Backend_Web/ArchitectureTests/: ArchitectureTests.csproj  ArchitectureTests.csproj.Backup.tmp  BaseTest.cs  UnitTest1.cs
Backend_Web/Domain/: DependencyInjection.cs  Domain.csproj
Backend_Web/Infrastructure/: DependencyInjection.cs  Infrastructure.csproj
Backend_Web/Presentation/: DependencyInjection.cs  Presentation.csproj  Presentation.http  Presentation.sln  Program.cs  StartUp.cs  appsettings.json
docs/: README.md
hiast-frontend/: ADMIN_README.md  middleware.js  package-lock.json  package.json
hiast-frontend/.next/: app-build-manifest.json  prerender-manifest.json  (+1 more)
src/: embedder.py  models.py  models_configuration.py  rag_abstractions.py  rag_chain.py  system_prompt.json  system_prompt.txt  token_manager.py  url_scraper.py
(+1500 files in other folders)
